RESOLVED FIXED12239
REGRESSION (r18816-r18818): Assertion failure in WebCore::Length::Length[in-charge](int, WebCore::LengthType, bool)
https://bugs.webkit.org/show_bug.cgi?id=12239
Summary REGRESSION (r18816-r18818): Assertion failure in WebCore::Length::Length[in-c...
David Kilzer (:ddkilzer)
Reported 2007-01-12 20:12:34 PST
The fix for Bug 9934 causes an assertion failure in debug builds because an integer value is used instead of a floating point value when creating the Length() object. Patch forthcoming with fix and a layout test (per Bug 9934 Comment #4).
Attachments
Patch v1 (30.54 KB, patch)
2007-01-12 20:20 PST, David Kilzer (:ddkilzer)
no flags
Patch v2 (30.53 KB, patch)
2007-01-12 20:29 PST, David Kilzer (:ddkilzer)
mjs: review+
David Kilzer (:ddkilzer)
Comment 1 2007-01-12 20:20:37 PST
Created attachment 12408 [details] Patch v1 Proposed fix and layout test.
David Kilzer (:ddkilzer)
Comment 2 2007-01-12 20:29:45 PST
Created attachment 12409 [details] Patch v2 Fixed results (Patch v1 had old results).
Maciej Stachowiak
Comment 3 2007-01-12 20:37:17 PST
Comment on attachment 12409 [details] Patch v2 r=me
David Kilzer (:ddkilzer)
Comment 4 2007-01-12 20:39:21 PST
Committed revision 18824.
Note You need to log in before you can comment on or make changes to this bug.