LayoutTests:

Reviewed by Maciej.

        - test for fast/css/line-height.html
          REGRESSION (r18816-r18818): Assertion failure in
          WebCore::Length::Length[in-charge](int, WebCore::LengthType, bool)

        * fast/css/line-height-expected.checksum: Added.
        * fast/css/line-height-expected.png: Added.
        * fast/css/line-height-expected.txt: Added.
        * fast/css/line-height.html: Added.

WebCore:

        Reviewed by Maciej.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12239
          REGRESSION (r18816-r18818): Assertion failure in
          WebCore::Length::Length[in-charge](int, WebCore::LengthType, bool)

        Test: fast/css/line-height.html

        * rendering/RenderTextControl.cpp:
        (WebCore::RenderTextControl::createInnerTextStyle): Use a float to create a percent Length.



Canonical link: https://commits.webkit.org/15830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18824 268f45cc-cd09-0410-ab3c-d52691b4dbfc